[gd_scene format=3 uid="uid://dtxk5w0lnwya0"]

[ext_resource type="Script" path="res://demo.gd" id="1"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Data Systems Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="InitBtn" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Initialize Data"

[node name="CompleteLevelBtn" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Complete Level 1"

[node name="CheckDataBtn" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Check Data"

[node name="SaveBtn" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="LoadBtn" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "Output:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputLabel" type="Label" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ready..."
vertical_alignment = 1
